# finanalize

./: .env.example  .gitignore  4-geckodriver-tmux.sh  README.md  compose.abdel.yml  compose.yml  flake.nix
backend/: Cargo.toml  Dockerfile
backend/prompts/: README.md
backend/prompts/answer-questions/: answer-questions.prompt.hbs
backend/prompts/content-classifier/: content-classifier.prompt.hbs
backend/prompts/data-classifier/: data-classifier.prompt.hbs
backend/prompts/date-extractor/: date-extractor.prompt.hbs
backend/prompts/graph/: graph.prompt.hbs
backend/prompts/graph-bar-generator/: graph-bar-generator.prompt.hbs
backend/prompts/graph-data-prep/: graph-data-prep.prompt.hbs
backend/prompts/graph-identifier/: graph-identifier.prompt.hbs
backend/prompts/graph-insertion/: graph-insertion.hbs  graph-insertion.prompt.hbs
backend/prompts/graph-line-generator/: graph-line-generator.prompt.hbs
backend/prompts/graph-pie-generator/: graph-pie-generator.prompt.hbs
backend/prompts/graph-stock-generator/: graph-stock-generator.prompt.hbs
backend/prompts/graph-table-generator/: graph-table-generator.prompt.hbs
backend/prompts/graph-visualization/: graph-visualization.prompt.hbs
backend/prompts/md-table-to-csv/: md-table-to-csv.hbs
backend/prompts/search/: search.prompt.hbs
backend/prompts/section/: section.prompt.hbs
backend/prompts/sectionize-questions/: sectionize-questions.prompt.hbs
backend/prompts/single-search/: single-search.prompt.hbs
backend/prompts/source-formatter/: source-formatter.prompt.hbs
backend/prompts/source-parsing-description/: source-parsing-description.hbs
backend/prompts/source-parsing-title/: source-parsing-title.prompt.hbs
backend/prompts/sub-section-questions/: sub-section-questions.prompt.hbs
backend/prompts/subsection/: subsection.prompt.hbs
backend/prompts/ticker-symbol/: ticker-symbol.prompt.hbs
backend/prompts/title/: title.prompt.hbs
backend/prompts/validation/: validation.prompt.hbs
backend/src/: auth_middleware.rs  blobs.rs  credit.rs  db.rs  graphing.rs  jwt.rs  main.rs  prelude.rs  prompting.rs  rabbitmq.rs  rag.rs  scraper.rs  sec.rs  workflow.rs
backend/src/api/: mod.rs
backend/src/api/v1/: mod.rs  (+2 more)
backend/src/extract/: csv.rs  excel.rs  mod.rs
backend/src/extractors/: csv.rs  excel.rs  figure.rs  html.rs  md.rs  mod.rs  pdf.rs  text.rs  text_extractor.rs
backend/src/latex/: mod.rs  renderer.rs
backend/src/llm/: mod.rs  ollama.rs  ullm.rs
backend/src/models/: mod.rs
backend/src/search/: mod.rs
backend/src/tasks/: mod.rs
(+149 files in other folders)
