[package]
name = "backend"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-cors = "0.7.0"
actix-web = "4.9.0"
async-trait = "0.1.83"
chrono = { version = "0.4.39", features = ["serde"] }
derive_more = { version = "1.0.0", features = ["full"] }
jsonwebtoken = "9.3.0"
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.137"
surrealdb = "2.1.4"
surrealize = "0.1.1"
thiserror = "2.0.11"

tokio = { version = "1.42.0", features = ["full"] }
