[package]
name = "backend"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-cors = "0.7.0"
actix-web = "4.9.0"
chrono = { version = "0.4.39", features = ["serde"] }
argon2 = "0.5.3"
async-trait = "0.1.85"
derive_more = { version = "1.0.0", features = ["full"] }
jsonwebtoken = "9.3.0"
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.137"
surrealize = "0.1.2"
surrealdb = { version = "2.1.4", features = ["http", "ml", "protocol-http"] }
thiserror = "2.0.11"
tokio = { version = "1.43.0", features = ["full"] }
