[package]
name = "backend"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-cors = "0.7.0"
actix-web = "4.9.0"
chrono = { version = "0.4.39", features = ["serde"] }
argon2 = "0.5.3"
async-trait = "0.1.85"
derive_more = { version = "1.0.0", features = ["full"] }
futures-util = "0.3.31"
jsonwebtoken = "9.3.0"
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.137"
surrealize = "0.1.2"
surrealdb = { version = "2.1.4", features = ["http", "protocol-http"] }
thiserror = "2.0.11"
tokio = { version = "1.43.0", features = ["full"] }
lapin = "2.5.0"
reqwest = "0.12.12"
handlebars = "6.3.0"
once_cell = "1.20.2"
polars = "0.46.0"
tempfile = "3.16.0"
calamine = "0.26.1"
lopdf = "0.34.0"
dotenvy = "0.15.7"
scraper = "0.23.1"
cssparser = "0.34.0"
selectors = "0.26.0"
fantoccini = "0.21.4"
log = "0.4.25"
env_logger = "0.11.6"
include_dir = "0.7.4"
uuid = { version = "1.13.1", features = ["v4"] }
deadpool = "0.12.2"
pdf = "0.9"
printpdf = "0.5.0"
pdf-extract = "0.8.2"
actix-ws = "0.3.0"
itertools = "0.14.0"
plotters = "0.3.7"
actix-files = "0.6.6"
mdka = "1.4.3"
schemars = { version = "0.8.22", features = ["derive_json_schema"] }
markup5ever = "0.14.1"
regex = "1.11.1"
markdown = "1.0.0-alpha.23"
serde_with = { version = "3.12.0", features = ["base64", "chrono", "json"] }
rust_decimal = "1.32"
rust_decimal_macros = "1.32"
async-lazy = "0.1.2"
